# edit

./: .gitignore  .ignore  CMakeLists.txt  README.md  credit.md  face.csv  face_media.py  ideas.md  local-run.sh  make_icon.sh  mouth_test.py  out_video.mp2  out_video.mpeg  out_video.mpg  piping.py  rae-run-quick.sh  rae-run.bat  rae-run.sh  run.sh  test.py  vision.py
assets/: icon.icns
assets/shaders/: clipping.frag  color_picker.frag  erase_mask.frag  hue_ring.frag  swirl.frag
common/: csv.cr  script_interface.cr  yaml.cr
docs/: BAD_crash_report_rae_export_movie.md  differences.md  intro.md  manim_notes.md  syntax-guide.md
html/: code.html  ssg_html.cr  website.html
include/: __prev_clay.h  clay.h  clay__dev.h  clay_renderer_raylib.c  claydev.h  dynamic_lib.h  platform_stdlib_patch.h
info/: random_crash_dump.txt  tips.txt
install/compiler_assets/: prelude.c  prelude.h
install/vscode/: crust-0.0.1.vsix  highlights.scm  rpp-0.0.1.vsix  tree-sitter-crust.wasm  tree-sitter-rpp.wasm
lib/ffmpeg-master-latest-linuxarm64-lgpl-shared/lib/: libswresample.so.5.4.100  libswscale.so.8.13.100
lib/ffmpeg-master-latest-linuxarm64-lgpl-shared/lib/pkgconfig/: libavdevice.pc
lib/ffmpeg-master-latest-linuxarm64-lgpl-shared/man/man1/: ffmpeg-all.1  ffplay-all.1  ffprobe-all.1
lib/ffmpeg-master-latest-win64-gpl-shared/include/libavutil/: ffversion.h
lib/ffmpeg-master-latest-win64-lgpl-shared/lib/pkgconfig/: libavfilter.pc
paint/: bezier_2d.cr  floodfill.cr  layer_list.cr  paint.cr  rppkg.toml  settings.cr  undo.cr
plugin_src/: CMakeLists.txt  plugin.cr  plugin.rpp  plugin_core.rpp
public_saves/hands/: layers.yaml  manifest.yaml
public_saves/hands/elements/: 0.yaml  1.yaml  2.yaml
raylib/: rl.cr
script_assets/: hand_wave.frag  rainbow_vignette.frag
script_assets/path/: path_grad.frag
scripts/: gen.bat  init.bat  plugin-gen.bat  plugin-init.bat  plugin-run.bat  run.bat  run.sh  test-gen.bat  test-run.bat  test-run.sh
scripts/mac/: ez-setup.bat  gen.sh  init.sh  plugin-gen.sh  plugin-init.sh  plugin-run.sh  plugin-update-core.sh  run.sh  test-gen.sh  test-run.sh  wrapper-gen.sh
src/: CMakeLists.txt  TODO.md  code_manager.cr  code_manager.rpp  cursor.cr  cursor.rpp  data.rpp  dylib.cr  dylib.rpp  dynamic_lib.h  edit.cr  edit.rpp  element.cr  element.rpp  encode_decode.cr  encode_decode.rpp  face.cr  face.rpp  ffmpeg_encoding.rpp  global_settings.cr  globals.cr  hotkey.cr  keyframing.cr  keyframing.rpp  loaders.cr  local-run.bat  local-run.sh  maths.cr  maths.rpp  paths.cr  recordings.cr  resources.cr  rppkg.toml  runtime_code.cr  textures.cr  theming.cr  theming.rpp  ui.cr  ui_elements.cr  ui_elements.rpp  (+3 more)
src/clay/: clay_app.cr  clay_app.rpp  clay_lib.cr  clay_lib.rpp
src/common/: csv.rpp  data.cr
src/example_data/: array.csv  bar_chart.csv  bar_chart_2.csv  bubble_chart.csv  companies.csv  curve.csv  line_graph.csv  line_graph_2_lines.csv  pie_chart.csv  scatterplot.csv  scatterplot_animated.csv  scatterplot_gt.csv  simple.csv  stacked_bar_chart.csv
src/example_data/demo/: barchart.csv  bubble.csv  linegraph.csv  scatterplot.csv
src/raylib/: raylib_CMakeLists.txt  raylib_shared_CMakeLists.txt  rl.cr  rl.rpp  rppkg.toml
src/script_interface/: script_interface.cr  script_interface.rpp
src/std/: list.cr  list.rpp  map.rpp  pair.rpp  std.cr  std.rpp  thread.rpp  timer.cr  timer.rpp
std/: hash.cr  hr_std.cr  list.cr  map.cr  pair.cr  slice.cr  std.cr  thread.cr  timer.cr
tcc/: main  main.c  rae-run.sh  tcc.cr  tcc_test.cr
tcc/main.dSYM/Contents/Resources/DWARF/: main
tcc/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
test_src/: CMakeLists.txt  file_util.cr  local-run.bat  local-run.sh  perlin.rpp  script.cr  script.rpp  script_main.cr  script_main.rpp  simple.csv
test_src/plugins/: crust_plugin.dylib  not_used_currently_rpp_plugin.dylib  rpp_plugin.dylib
user_runtime_code_common/: recordings.cr  user_runtime_code_common.cr
wrapper_src/: wrapper.cr
